tests/agl/rejections/type/return_inference_conflict.agl
def f(flag: bool) =
  if flag =>
    return 1
  "tail"
f(true)
